fixing compilation issue vith javax.inject module