@@ -16,6 +16,9 @@
 
         <java.source.version>11</java.source.version>
 
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        
         <junit.jupiter.version>5.2.0</junit.jupiter.version>
         <assertj.core.version>3.10.0</assertj.core.version>
     </properties>
@@ -56,7 +59,7 @@
         </dependency>
 
     </dependencies>
-         
+
     <build>
         <pluginManagement>
             <plugins>
@@ -65,8 +68,7 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.0</version>
                     <configuration>
-                        <source>11</source>
-                        <target>11</target>
+                        <release>11</release>
                         <compilerArgs>
                             <arg>--add-modules</arg>
                             <arg>javax.inject</arg>
@@ -80,6 +82,27 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
